// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Columns /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  padding: 10px;
}

<section
  aria-disabled="true"
  class="poodle-box c0 poodle-columns c1 c2"
  id="columns"
>
  Columns
</section>
`;

exports[`<Columns /> should render columns correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Hello
</div>
`;

exports[`<Columns /> should render with array responsive gutter correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -16px;
  margin-top: -16px;
}

@media screen and (min-width: 576px) {
  .c1 {
    margin-left: -20px;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-left: -30px;
  }
}

@media screen and (min-width: 992px) {
  .c1 {
    margin-left: -40px;
  }
}

@media screen and (min-width: 576px) {
  .c1 {
    margin-top: -25px;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-top: -35px;
  }
}

@media screen and (min-width: 992px) {
  .c1 {
    margin-top: -45px;
  }
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with custom collapse and gutter correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

@media screen and (min-width: 768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-left: -20px;
  }
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with custom collapse and responsive gutter correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

@media screen and (min-width: 768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-left: -20px;
  }
}

@media screen and (min-width: 992px) {
  .c1 {
    margin-left: -30px;
  }
}

@media screen and (min-width: 1200px) {
  .c1 {
    margin-left: -40px;
  }
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with custom collapse correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

@media screen and (min-width: 768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with custom gutter correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -50px;
  margin-top: -30px;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with object responsive gutter correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -5px;
}

@media screen and (min-width: 576px) {
  .c1 {
    margin-left: -10px;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-left: -20px;
  }
}

@media screen and (min-width: 992px) {
  .c1 {
    margin-left: -30px;
  }
}

@media screen and (min-width: 1200px) {
  .c1 {
    margin-left: -40px;
  }
}

@media screen and (min-width: 576px) {
  .c1 {
    margin-top: -15px;
  }
}

@media screen and (min-width: 768px) {
  .c1 {
    margin-top: -25px;
  }
}

@media screen and (min-width: 992px) {
  .c1 {
    margin-top: -35px;
  }
}

@media screen and (min-width: 1200px) {
  .c1 {
    margin-top: -45px;
  }
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> should render with wrap 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -50px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 poodle-columns c1"
>
  Columns
</div>
`;

exports[`<Columns /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 10px;
  top: 0;
  text-indent: 1px;
  letter-spacing: 200px;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 10px;
  top: 0;
  text-indent: 1px;
  letter-spacing: 200px;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 poodle-columns morning c1"
>
  Columns
</div>
`;

exports[`<Columns /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<div
  class="poodle-box c0 poodle-columns c1 c2"
>
  Columns
</div>
`;

exports[`<Columns /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -50px;
}

<div
  class="poodle-box c0 poodle-columns c1 hello c2"
  id="id"
>
  Columns
</div>
`;
